# chinmey-sai-farms

./: .gitignore  README.md  docker-compose.yaml
api/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
api/core/: __init__.py  lifespan.py
api/core/routes/: __init__.py  crops.py  customers.py  extent_ranges.py  layouts.py  payment_mode.py  plot_transaction.py  plots.py  pricing.py
api/daos/: __init__.py  base.py  base_dao.py  crop.py  crop_dao.py  customer.py  customer_dao.py  extent_range.py  extent_range_dao.py  layout.py  layout_dao.py  payment_mode.py  payment_mode_dao.py  plot.py  plot_dao.py  plot_transaction.py  pricing.py
api/db/: __init__.py  config.py  engine.py  session.py
api/dtos/: __init__.py  base.py  base_dto.py  crop.py  crop_dto.py  customer.py  customer_dto.py  exent_range_dto.py  extent_range.py  extent_range_dto.py  layout.py  layout_dto.py  payment_mode.py  payment_mode_dto.py  plot.py  plot_dto.py  plot_transactions.py  pricing.py
api/models/: __init__.py  crop.py  customer.py  customer_schema.py  extent_range.py  layout.py  layout_schema.py  payment_mode.py  plot.py  plot_transaction.py  pricing.py
api/routes/: __init__.py  customer_route.py  customers_route.py  layouts_route.py  plots_route.py
docs/: chinmey-sai-farms.postman_collection.json
ui/: package-lock.json  package.json
ui/src/: App.tsx  api.tsx  index.tsx  theme.ts
ui/src/components/: RecordFormDialog.tsx  Sidebar.tsx
ui/src/pages/: Dashboard.tsx  Layouts.tsx  Settings.tsx
ui/src/pages/tables/: CropTable.tsx  CustomersTable.tsx  (+4 more)
