[project]
name = "chinmey-farms-services"
version = "1.0.0"
description = ""
authors = [
    {name = "subramanyam.mogili"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12,<0.116.0",
    "uvicorn>=0.34.1,<0.35.0",
    "sqlalchemy>=2.0.40,<3.0.0",
    "dotenv>=0.9.9,<0.10.0",
    "psycopg2-binary>=2.9.10,<3.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
